Fixed stylesheet to handle drop down properly on mobile

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -88,3 +88,7 @@ margin-top: 7px; }
 position: relative;
 height: 100px;
 }
+
+.navbar-fixed-top {
+	position: relative;
+}
